# ndt_omp_MSVC

./: CMakeLists.txt
include/pclomp/: gicp_omp_impl.hpp  ndt_omp_impl.hpp  voxel_grid_covariance_omp.h  voxel_grid_covariance_omp_impl.hpp
